@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.152 2007-10-23 20:32:43 cmatsuoka Exp $
+$Id: ChangeLog,v 1.153 2007-10-24 11:09:24 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -45,6 +45,7 @@ Stable versions
 	  by Ralf Hoffmann, Misanthropy.MED loads correctly)
 	- fixed number of patterns in Funktracker modules
 	- added Funktracker persistent portamento and volume slide effects
+	- fixed offset effect with parameter 00 (reported by Adric Riedel)
 
 2.3.2 (20071009):
 	- added ModPlug Tracker IT quirk: ignore sample global volume (fixes
